# materia

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  discord-release.yml  publish.yml
scripts/: install-hooks.sh
src/: compile.rs  crystal.rs  element.rs  interaction.rs  lib.rs  material.rs  molecular.rs  polymer.rs  presets.rs  reaction.rs  substance.rs
tests/: compile_tests.rs  hydraulic_tests.rs  preset_tests.rs  validation.rs
